Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-4384

Using a concurrent client with cpp async is not safe.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • 0.10.0, 0.11.0, 0.12.0
    • 0.13.0
    • Should affect all platforms but has been noticed first on Windows, x86_64.

    • Important

    Description

      I'm using the generated *ServiceConcurrentClient classes. They should allow me to call multiple functions at the same time.

      The issue as that the ::apache::thrift::async::TConcurrentClientSyncInfo class is a member of the generated service. If I have a project with multiple services sharing the same connection (protocol) with each other, the services will not be mutually excluded from reading on the same socket.

      I did a small test with patching the generated code and injecting the same instance of TConcurrentClientSyncInfo into all my services and everything was fine.

      Question: Do you need a small project to reproduce this or is it obvious enough? Just check out any generated code and you will see that the TConcurrentClientSyncInfo is not shared between different services.

      Attachments

        Issue Links

          Activity

            People

              jking3 James E. King III
              MichaelE1000 Michael Eiler
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 20m
                  20m