THRIFT-4384: fix concurrent sync in cpp async client code